Tüm servisleri ayağa kaldırıp production ortamında API ile veritabanına veri kaydetme

--- a/MicroService1.API/appsettings.Production.json
+++ b/MicroService1.API/appsettings.Production.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "MyCon": ""
+    "MyCon": "Server=sqlserver,1433;Database=DockerComposeDb;User=sa;Password=Password12*;TrustServerCertificate=True"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   }
+}
