--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,13 +11,15 @@ services:
       - "1433:1433"
   microservice1.api:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      #- ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Production
     ports:
-      - "5100-5200:80"
+      - "5000:80"
        #- "80"
   microservice2.api:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      #- ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Production
     ports:
       #- "80"
-      - "5000-5100:80"
+      - "5010:80"
