İki servisin haberleşmesi

--- a/MicroService1.API/appsettings.Development.json
+++ b/MicroService1.API/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "MicroServices": { "baseUrlMicroService2": "http://localhost:5090" },
   "ConnectionStrings": {
     "MyCon": "Server=localhost,1433;Database=DockerComposeDb;User=sa;Password=Password12*;TrustServerCertificate=True"
   },
